--- a/src/raytracer.vcxproj
+++ b/src/raytracer.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="sphere.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="camera.h" />
     <ClInclude Include="hitable.h" />
     <ClInclude Include="hitablelist.h" />
     <ClInclude Include="ray.h" />
